# HW_22.1

./: ENV_TEMPLATES  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_product_is_published_product_views_counter_version.py  0003_product_creator.py  0004_alter_product_options.py
catalog/templates/: contacts.html
catalog/templates/catalog/: catalog_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: error_reset_password.html  reset_password.html  success_reset_password.html  user_form.html
